# agent_swarm

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  ollama_test.json
.github/workflows/: ci.yml  release.yml
bolt-ui/: index.html  package-lock.json  package.json  vite.config.ts
bolt-ui/src/: App.tsx  index.css
bolt-ui/src-tauri/: Cargo.toml  tauri.conf.json
bolt-ui/src-tauri/src/: main.rs
bolt-ui/src/components/: ChatInput.tsx  MessageBubble.tsx  SettingsPanel.tsx  Sidebar.tsx  WelcomeScreen.tsx
bolt-ui/src/hooks/: useApi.ts  useChat.ts
bolt-ui/src/types/: index.ts
npm/: README.md  install.js  package.json
src/: main.cpp  matrix.cpp  matrix.h
src/agent/: action.h  action_parser.cpp  action_parser.h  agent.cpp  agent.h  build_and_test_tool.cpp  build_and_test_tool.h  calculator_tool.cpp  calculator_tool.h  click_element_tool.cpp  click_element_tool.h  code_intel_tool.cpp  code_intel_tool.h  edit_file_tool.cpp  edit_file_tool.h  execution_step.h  focus_window_tool.cpp  focus_window_tool.h  inspect_ui_tool.cpp  inspect_ui_tool.h  list_dir_tool.cpp  list_dir_tool.h  list_processes_tool.cpp  list_processes_tool.h  list_windows_tool.cpp  list_windows_tool.h  message.h  observation.h  open_app_tool.cpp  open_app_tool.h  permission_policy.cpp  permission_policy.h  plugin_loader.cpp  plugin_loader.h  plugin_tool.cpp  plugin_tool.h  read_file_tool.cpp  read_file_tool.h  run_command_tool.cpp  run_command_tool.h  (+20 more)
src/app/: agent_cli_options.cpp  agent_cli_options.h  agent_factory.cpp  agent_factory.h  agent_runner.cpp  agent_runner.h  agent_services.h  agent_status.h  api_server.cpp  api_server.h  app_config.cpp  app_config.h  approval_provider_factory.cpp  approval_provider_factory.h  benchmark_runner.cpp  benchmark_runner.h  discord_gateway.cpp  discord_gateway.h  file_audit_logger.cpp  file_audit_logger.h  http_server_utils.h  model_client_factory.cpp  model_client_factory.h  null_audit_logger.h  program_cli.cpp  program_cli.h  self_check_runner.cpp  self_check_runner.h  setup_wizard.cpp  signal_handler.cpp  signal_handler.h  static_approval_provider.cpp  static_approval_provider.h  terminal_approval_provider.cpp  terminal_approval_provider.h  terminal_input.cpp  terminal_input.h  terminal_renderer.cpp  terminal_renderer.h  terminal_ui_config.cpp  (+7 more)
src/core/caching/: tool_result_cache.cpp  tool_result_cache.h
src/core/config/: agent_runtime_config.h  approval_config.h  command_policy_config.h  ollama_connection_config.h  policy_config.h  sandbox_config.h
src/core/indexing/: file_index.cpp  file_index.h  file_prefetch.cpp  file_prefetch.h
src/core/interfaces/: approval_provider.h  audit_logger.h  command_runner.h  file_system.h  http_transport.h  model_client.h  process_manager.h  ui_automation.h  window_controller.h
src/core/mcp/: mcp_server.cpp  mcp_server.h
src/core/model/: chat_message.h  tool_schema.h
src/core/net/: sse_parser.cpp  sse_parser.h
src/core/routing/: model_router.cpp  model_router.h  prompt_compressor.cpp  prompt_compressor.h
src/core/session/: memory_store.cpp  memory_store.h  session_store.cpp  session_store.h
src/core/threading/: thread_pool.cpp  thread_pool.h
src/demo/: training_demo.cpp  training_demo.h
src/platform/: platform_agent_factory.cpp  platform_agent_factory.h
src/platform/linux/: linux_agent_factory.cpp  linux_agent_factory.h  linux_command_runner.cpp  linux_http_transport.cpp  linux_http_transport.h  linux_process_manager.cpp  sandboxed_command_runner.cpp  sandboxed_command_runner.h
src/platform/windows/: http2_transport.cpp  http2_transport.h  ollama_json_utils.cpp  ollama_json_utils.h  windows_agent_factory.cpp  windows_agent_factory.h  windows_command_runner.cpp  windows_command_runner.h  windows_file_system.cpp  windows_file_system.h  windows_ollama_model_client.cpp  windows_ollama_model_client.h  windows_process_manager.cpp  windows_process_manager.h  windows_ui_automation.cpp  windows_ui_automation.h  windows_window_controller.cpp  windows_window_controller.h  winhttp_transport.cpp  winhttp_transport.h
src/providers/: claude_client.cpp  claude_client.h  gemini_client.cpp  gemini_client.h  ollama_chat_client.cpp  ollama_chat_client.h  openai_client.cpp  openai_client.h
tests/: agent_integration_tests.cpp  api_e2e_tests.cpp  capability_tests.cpp  e2e_tests.cpp  kernel_tests.cpp  mcp_server_tests.cpp
vscode-extension/: package.json
vscode-extension/src/: extension.ts
web/: app.js  index.html  styles.css
web-dist/: index.html
web-dist/assets/: index-BCwcR0kr.css  index-C7EL-32b.js  index-CRB-heLy.css  index-Cmc7H5Ck.js  index-D52BZEfs.css
